<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="pref_logenable"
            android:title="@string/pref_logenable"
            android:summary="@string/pref_logenable_summ"
            android:defaultValue="true" />
    <!--<EditTextPreference-->
            <!--android:key="pref_email"-->
            <!--android:title="@string/pref_email"-->
            <!--android:summary="@string/pref_email_summ"-->
            <!--android:defaultValue="your-email@address" />-->
    <EditTextPreference
            android:key="pref_logloc1"
            android:title="@string/pref_logloc"
            android:summary="@string/pref_logloc_summ"
            android:defaultValue="/tmp/nogiets" />
    <!--<CheckBoxPreference-->
            <!--android:key="pref_showgraph"-->
            <!--android:title="@string/pref_showgraph"-->
            <!--android:defaultValue="true" />-->
    <!--<CheckBoxPreference-->
            <!--android:key="pref_startstop"-->
            <!--android:title="@string/pref_startstop"-->
            <!--android:summary="@string/pref_startstop_summ"-->
            <!--android:defaultValue="true" />-->
</PreferenceScreen>