<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="18sp"
                  android:visibility="invisible"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:visibility="invisible"
                  android:layout_width="0sp"
                  android:layout_height="0sp"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="0sp"
                  android:layout_height="0sp"
                  android:layout_margin="10dp" android:visibility="invisible">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_data"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                  android:textAlignment="center">
        <TextView android:id="@+id/data_value_heartrate"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/no_data"
                  android:textSize="98sp"
                  android:typeface="normal"
                  android:gravity="center_vertical|center_horizontal"
                  android:layout_marginTop="30dp"
                  android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Elapsed: "/>
            <com.restracks.android.ble.Chronometer
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chronoss"
                    android:text="00:00:00"/>
            <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Distance: "/>-->
            <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/tvDistance"/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:id="@+id/Chart_layout"
            android:orientation="vertical"
            android:gravity="bottom">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal"
            android:id="@+id/btnSetStartStop"
            android:layout_marginTop="8sp">

        <Button
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="Start"
                android:id="@+id/btnStartPause"
                android:onClick="startChrono"/>

        <Button
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:id="@+id/btnStop"
                android:onClick="stopChrono"/>
    </LinearLayout>
    </LinearLayout>

    <ExpandableListView android:id="@+id/gatt_services_list"
            android:layout_width="0sp"
            android:layout_height="0sp" android:visibility="invisible"/>
</RelativeLayout>